[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/gui/theme/theme_options.tres" type="Theme" id=1]
[ext_resource path="res://source/scripts/gui/GuiScreenTitle.gd" type="Script" id=2]
[ext_resource path="res://source/scenes/gui/gui_popup_options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/texture/gui/gui_title_logo.png" type="Texture" id=4]
[ext_resource path="res://source/scenes/environment_default.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/shader/cel.shader" type="Shader" id=6]
[ext_resource path="res://assets/model/logo.mesh" type="ArrayMesh" id=7]
[ext_resource path="res://assets/resource/animation/GuiLogoAppear.tres" type="Animation" id=8]
[ext_resource path="res://assets/shader/shine.shader" type="Shader" id=9]
[ext_resource path="res://source/scenes/gui/gui_transition.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/sound/music/ost_layerstest_bass.ogg" type="AudioStream" id=11]

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 9 )
shader_param/shine_color = Color( 1, 1, 1, 1 )
shader_param/cycle_interval = 1.0
shader_param/shine_speed = 1.0
shader_param/shine_width = 5.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0.317829, 0.496124 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 3 )

[sub_resource type="ShaderMaterial" id=4]
next_pass = SubResource( 9 )
shader = ExtResource( 6 )
shader_param/albedo = Color( 0.866667, 0.784314, 0.223529, 1 )
shader_param/normal_scale = null
shader_param/specular = 0.8
shader_param/specular_amount = 0.6
shader_param/specular_smoothness = 0.02
shader_param/rim = 1.0
shader_param/rim_amount = 0.6
shader_param/rim_smoothness = 0.02
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/emission = Color( 0, 0, 0, 1 )
shader_param/emission_energy = 1.0
shader_param/uv_scale = Vector2( 1, 1 )
shader_param/uv_offset = Vector2( 0, 0 )
shader_param/diffuse_curve = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=11]

[sub_resource type="ShaderMaterial" id=10]
next_pass = SubResource( 11 )
shader = ExtResource( 9 )
shader_param/shine_color = Color( 1, 0.917647, 0.431373, 1 )
shader_param/cycle_interval = 1.0
shader_param/shine_speed = 1.0
shader_param/shine_width = 15.0

[sub_resource type="ShaderMaterial" id=5]
next_pass = SubResource( 10 )
shader = ExtResource( 6 )
shader_param/albedo = Color( 0.74902, 0.494118, 0.0431373, 1 )
shader_param/normal_scale = -16.0
shader_param/specular = 1.0
shader_param/specular_amount = 0.0
shader_param/specular_smoothness = 0.0
shader_param/rim = 0.1
shader_param/rim_amount = 0.5
shader_param/rim_smoothness = 0.02
shader_param/metallic = 0.0
shader_param/roughness = 1.0
shader_param/emission = Color( 0, 0, 0, 1 )
shader_param/emission_energy = 0.5
shader_param/uv_scale = Vector2( 2, 2 )
shader_param/uv_offset = Vector2( 0, 0 )
shader_param/diffuse_curve = SubResource( 2 )

[sub_resource type="Animation" id=13]
resource_name = "GuiLogoDisappear"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, -3 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 90, 270, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -3, -3 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1, -32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionalLight:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -55, 0, 0 ), Vector3( 55, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DirectionalLight:light_energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 0.6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MeshInstance:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.2 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "GuiLogoIdle"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6, 8 ),
"transitions": PoolRealArray( -3, -3, -3, -3, -3 ),
"update": 0,
"values": [ Vector3( 0, 0, 2 ), Vector3( 0, 0, -2 ), Vector3( 0, 0, 2 ), Vector3( 0, 0, -2 ), Vector3( 0, 0, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2, -2, -2, -2 ),
"update": 0,
"values": [ Vector3( 0, 1, 0 ), Vector3( 0, 1.2, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 1.2, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 1.2, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 1.2, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.2 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CapsuleMesh" id=14]

[sub_resource type="Shader" id=15]
code = "/*
	バブルシェーダー by あるる（きのもと 結衣） @arlez80
	Bubble Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type spatial;

uniform float fuwafuwa_speed = 1.5;
uniform float fuwafuwa_size = 0.05;

uniform vec4 outline_color : hint_color = vec4( 0.45, 0.70, 1.0, 1.0 );
uniform float outline_ratio = 1.0;
uniform float noise_speed = 0.2;
uniform float noise_scale = 0.5;

vec3 hsv2rgb( float h, float s, float v )
{
	return (
		(
			clamp(
				abs( fract( h + vec3( 0.0, 2.0, 1.0 ) / 3.0 ) * 6.0 - 3.0 ) - 1.0
			,	0.0
			,	1.0
			) - 1.0
		) * s + 1.0
	) * v;
}

float random( vec2 pos )
{ 
	return fract(sin(dot(pos, vec2(12.9898,78.233))) * 43758.5453);
}

void vertex( )
{
	vec3 v = clamp( cos( VERTEX * 10.0 + vec3( TIME * fuwafuwa_speed ) ) + vec3( 1.0 ), 0.0, 1.0 );
	VERTEX *= 1.0 + dot( v, v ) * fuwafuwa_size * 0.5;
}

void fragment( )
{
	float outline_alpha = clamp( ( 1.0 - dot( NORMAL, VIEW ) ) * outline_ratio, 0.0, 1.0 );
	vec3 color = hsv2rgb( outline_alpha - 1.5 + noise_speed * TIME, 1.0, 1.0 ) * noise_scale;

	ALBEDO = mix( color, outline_color.rgb, max( outline_alpha - 0.3, 0.0 ) );
	ALPHA = outline_color.a * outline_alpha;
}
"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/fuwafuwa_speed = 1.1
shader_param/fuwafuwa_size = 0.05
shader_param/outline_color = Color( 1, 1, 1, 1 )
shader_param/outline_ratio = 0.8
shader_param/noise_speed = 0.1
shader_param/noise_scale = 1.5

[sub_resource type="Animation" id=17]
resource_name = "BubbleWobble"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 270, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[node name="GuiTitle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="World" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
mesh = ExtResource( 7 )
skeleton = NodePath("../..")
material/0 = SubResource( 4 )
material/1 = SubResource( 5 )

[node name="AnimationLogo" type="AnimationPlayer" parent="World/MeshInstance"]
root_node = NodePath("../..")
playback_default_blend_time = 0.5
anims/GuiLogoAppear = ExtResource( 8 )
anims/GuiLogoDisappear = SubResource( 13 )
anims/GuiLogoIdle = SubResource( 12 )
anims/RESET = SubResource( 7 )

[node name="SpringArm" type="SpringArm" parent="World"]
spring_length = 13.0

[node name="Camera" type="Camera" parent="World/SpringArm"]
fov = 35.0

[node name="DirectionalLight" type="DirectionalLight" parent="World"]
transform = Transform( 1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 0, 1.5, 1.6 )
light_color = Color( 0.690196, 0.690196, 0.690196, 1 )
light_energy = 0.5
light_specular = 0.0
light_bake_mode = 0
shadow_color = Color( 0.290196, 0.34902, 0.737255, 1 )
directional_shadow_split_1 = 0.015
directional_shadow_normal_bias = 10.0
directional_shadow_bias_split_scale = 0.0
directional_shadow_depth_range = 1
directional_shadow_max_distance = 8192.0

[node name="EnvironmentDefault" parent="World" instance=ExtResource( 5 )]

[node name="MeshInstance2" type="MeshInstance" parent="World"]
transform = Transform( -2.18557e-08, 0, 1, 0, 0.5, 0, -0.5, 0, -4.37114e-08, 0, -2.11835, -0.5 )
mesh = SubResource( 14 )
material/0 = SubResource( 16 )

[node name="AnimationBubble" type="AnimationPlayer" parent="World/MeshInstance2"]
anims/BubbleWobble = SubResource( 17 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -560.0
margin_top = 80.0
margin_right = 1658.0
margin_bottom = 1284.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
expand = true

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -310.0
margin_top = -340.0
margin_right = 310.0
margin_bottom = -45.0
theme = ExtResource( 1 )

[node name="StartButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
margin_right = 620.0
margin_bottom = 145.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start Game"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
margin_top = 149.0
margin_right = 620.0
margin_bottom = 295.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="GuiOptions" parent="." instance=ExtResource( 3 )]

[node name="GuiTransition" parent="." instance=ExtResource( 10 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
bus = "Music"

[connection signal="pressed" from="ButtonContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ButtonContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
